// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 1`] = `
{
  "1": {
    "dependencies": Map {
      "@@selector-common-name-0" => true,
    },
    "dependents": Map {
      "no-1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 3,
        "operation": "addDependent",
      },
    },
    "isSelector": undefined,
    "refCount": 1,
    "weight": 3,
  },
  "@@selector-common-name-0": {
    "dependencies": Map {
      "root" => true,
    },
    "dependents": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
      },
    },
    "isSelector": true,
    "refCount": 1,
    "weight": 2,
  },
  "root": {
    "dependencies": Map {},
    "dependents": Map {
      "@@selector-common-name-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
      },
    },
    "isSelector": undefined,
    "refCount": 1,
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 2`] = `
{
  "2": {
    "dependencies": Map {
      "@@selector-common-name-2" => true,
    },
    "dependents": Map {
      "no-3" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 3,
        "operation": "addDependent",
      },
    },
    "isSelector": undefined,
    "refCount": 1,
    "weight": 3,
  },
  "@@selector-common-name-2": {
    "dependencies": Map {
      "root" => true,
    },
    "dependents": Map {
      "2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
      },
    },
    "isSelector": true,
    "refCount": 1,
    "weight": 2,
  },
  "root": {
    "dependencies": Map {},
    "dependents": Map {
      "@@selector-common-name-2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
      },
    },
    "isSelector": undefined,
    "refCount": 1,
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 3`] = `
{
  "1": {
    "dependencies": Map {
      "@@selector-common-name-4" => true,
    },
    "dependents": Map {
      "no-5" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 3,
        "operation": "addDependent",
      },
    },
    "isSelector": undefined,
    "refCount": 1,
    "weight": 3,
  },
  "2": {
    "dependencies": Map {
      "@@selector-common-name-2" => true,
    },
    "dependents": Map {
      "no-3" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 3,
        "operation": "addDependent",
      },
    },
    "isSelector": undefined,
    "refCount": 1,
    "weight": 3,
  },
  "@@selector-common-name-2": {
    "dependencies": Map {
      "root" => true,
    },
    "dependents": Map {
      "2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
      },
    },
    "isSelector": true,
    "refCount": 1,
    "weight": 2,
  },
  "@@selector-common-name-4": {
    "dependencies": Map {
      "root" => true,
    },
    "dependents": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
      },
    },
    "isSelector": true,
    "refCount": 1,
    "weight": 2,
  },
  "root": {
    "dependencies": Map {},
    "dependents": Map {
      "@@selector-common-name-2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
      },
      "@@selector-common-name-4" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
      },
    },
    "isSelector": undefined,
    "refCount": 2,
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 4`] = `
{
  "1": {
    "dependencies": Map {
      "@@selector-common-name-4" => true,
    },
    "dependents": Map {
      "no-5" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 3,
        "operation": "addDependent",
      },
    },
    "isSelector": undefined,
    "refCount": 1,
    "weight": 3,
  },
  "@@selector-common-name-4": {
    "dependencies": Map {
      "root" => true,
    },
    "dependents": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
      },
    },
    "isSelector": true,
    "refCount": 1,
    "weight": 2,
  },
  "root": {
    "dependencies": Map {},
    "dependents": Map {
      "@@selector-common-name-4" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
      },
    },
    "isSelector": undefined,
    "refCount": 1,
    "weight": 1,
  },
}
`;
